--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,12 @@
 {
   "manifest_version": 2,
   "name": "JIRA Issue Link Visualiser",
-  "version": "0.1",
+  "version": "1.0",
+  "description": "A more visual way of viewing the links between your currently selected issue and other issues in Atlassian JIRA",
+  "icons": { "16": "icon16.png",
+           "48": "icon48.png",
+          "128": "icon128.png" },
+  "author": "Adam Straube",
   "requirements": {
 	"3D": {
 		"features": ["webgl"]
