Hotfix: allow detection of Jira when using http in addition to https

--- a/manifest.json
+++ b/manifest.json
@@ -2,11 +2,14 @@
   "manifest_version": 2,
   "name": "JIRA Issue Link Visualiser",
   "version": "1.0.1",
-  "description": "A more visual way of viewing the links between your currently selected issue and other issues in Atlassian JIRA",
-  "icons": { "16": "icon16.png",
-           "48": "icon48.png",
-          "128": "icon128.png" },
-  "author": "Adam Straube",
+  "options_ui": {
+    "page": "options.html",
+	    // Recommended.
+    "chrome_style": true,
+    // Not recommended; only provided for backwards compatibility,
+    // and will be unsupported in a future version of Chrome (TBD).
+    "open_in_tab": true
+  },
   "requirements": {
 	"3D": {
 		"features": ["webgl"]
@@ -18,13 +21,7 @@
   ],
   "content_scripts": [
   {
-    "matches": ["https://*/*/browse/*"],
-    "js": ["jquery-3.1.0.min.js", "vivagraph.js", "issueDetect.js"],
-	"css": ["issueDetect.css"],
-	"svg": ["fullscreen-symbol.svg"]
-  },
-  {
-    "matches": ["https://*/browse/*"],
+    "matches": ["*://*/*/browse/*", "*://*/browse/*"],
     "js": ["jquery-3.1.0.min.js", "vivagraph.js", "issueDetect.js"],
 	"css": ["issueDetect.css"],
 	"svg": ["fullscreen-symbol.svg"]
